--- a/index.html
+++ b/index.html
@@ -77,23 +77,26 @@
 
         .finger {
             position: absolute;
-            width: 44px;
-            height: 44px;
+            width: 66px;
+            height: 66px;
             background: transparent;
             top: 0;
             left: 0;
-            -webkit-border-radius: 22px;
-            -moz-border-radius: 22px;
-            border-radius: 22px;
+            -webkit-border-radius: 33px;
+            -moz-border-radius: 33px;
+            border-radius: 33px;
             -webkit-transition: background .1s ease-in-out;
             -moz-transition: background .1s ease-in-out;
             -ms-transition: background .1s ease-in-out;
             -o-transition: background .1s ease-in-out;
             transition: background .1s ease-in-out;
+            -webkit-filter: blur(15px);
+            filter: blur(15px);
         }
 
         .finger.active {
             background: #d81f38;
+
         }
 
         .title, .oscillator, .filter, .output {
