Added css background radial gradient

--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
             -webkit-touch-callout: none; 
         } 
         body {
-            background: #485156;
+            background: #7d7e7d;
+            background: -moz-radial-gradient(center, ellipse cover, #7d7e7d 0%, #0e0e0e 100%);
+            background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,#7d7e7d), color-stop(100%,#0e0e0e));
+            background: -webkit-radial-gradient(center, ellipse cover, #7d7e7d 0%,#0e0e0e 100%);
+            background: -o-radial-gradient(center, ellipse cover, #7d7e7d 0%,#0e0e0e 100%);
+            background: -ms-radial-gradient(center, ellipse cover, #7d7e7d 0%,#0e0e0e 100%);
+            background: radial-gradient(ellipse at center, #7d7e7d 0%,#0e0e0e 100%);
         }
 
         h1, h2 {
