--- a/index.html
+++ b/index.html
@@ -1,259 +1,18 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="utf-8" />
+    <meta name="description" content="WavePad - Experimenting with the Web Audio API" />
+    <meta name="author" content="Alex Gibson" />
     <title>WavePad</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-    <style>
-        * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
-
-        html { 
-            -webkit-text-size-adjust: 100%;
-            -ms-text-size-adjust: 100%;
-            -webkit-user-select: none;
-            -webkit-tap-highlight-color: rgba(0,0,0,0);
-            -webkit-touch-callout: none; 
-        } 
-        body {
-            font:15px/20px Helvetica, Arial, Verdana, sans-serif;
-            background: #7d7e7d;
-            background: -moz-radial-gradient(center, ellipse cover, #7d7e7d 0%, #0e0e0e 100%);
-            background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,#7d7e7d), color-stop(100%,#0e0e0e));
-            background: -webkit-radial-gradient(center, ellipse cover, #7d7e7d 0%,#0e0e0e 100%);
-            background: -o-radial-gradient(center, ellipse cover, #7d7e7d 0%,#0e0e0e 100%);
-            background: -ms-radial-gradient(center, ellipse cover, #7d7e7d 0%,#0e0e0e 100%);
-            background: radial-gradient(ellipse at center, #7d7e7d 0%,#0e0e0e 100%);
-        }
-
-        h1 {
-            margin: 0;
-            padding: 0;
-            color: #ffffff;
-            font-size: 25px;
-            text-transform: uppercase;
-        }
-
-        h2 {
-            color: #ffffff;
-            font-size: 13px;
-        }
-
-        .container {
-            width: 512px; 
-            margin: 0 auto; 
-            text-align: center;
-        }
-
-        .surface {
-            position: relative;
-            overflow: hidden;
-            width: 512px; 
-            height: 512px; 
-            border: 5px solid #d81f38;
-            background: #100e16;
-            -webkit-border-radius: 15px;
-            -moz-border-radius: 15px;
-            border-radius: 15px;
-            -webkit-transition: background .1s ease-in-out;
-            -moz-transition: background .1s ease-in-out;
-            -ms-transition: background .1s ease-in-out;
-            -o-transition: background .1s ease-in-out;
-            transition: background .1s ease-in-out;
-            cursor: pointer;
-        }
-
-        .surface.pressed {
-
-        }
-
-        .surface:before {
-            position: absolute;
-            content: "";
-            height: 246px;
-            width: 502px;
-            border-bottom: 1px solid #485156;
-            top: 0;
-            left: 0;
-        }
-
-        .surface:after {
-            position: absolute;
-            content: "";
-            height: 502px;
-            width: 246px;
-            border-right: 1px solid #485156;
-            top: 0;
-            left: 0;
-        }
-
-        .finger {
-            position: absolute;
-            width: 66px;
-            height: 66px;
-            background: transparent;
-            top: 0;
-            left: 0;
-            -webkit-border-radius: 33px;
-            -moz-border-radius: 33px;
-            border-radius: 33px;
-            -webkit-transition: background .1s ease-in-out;
-            -moz-transition: background .1s ease-in-out;
-            -ms-transition: background .1s ease-in-out;
-            -o-transition: background .1s ease-in-out;
-            transition: background .1s ease-in-out;
-            -webkit-filter: blur(15px);
-            filter: blur(15px);
-            cursor: pointer;
-        }
-
-        .finger.active {
-            background: #d81f38;
-
-        }
-
-        .oscillator, .filter, .output {
-            float: right;
-            margin-bottom: 1em;
-            margin-left: 1em;
-        }
-
-        .title {
-            margin-top: 1em;
-            float: left;
-        }
-    </style>
+    <link rel="stylesheet" href="css/styles.css" />
+    <script src="js/main.js"></script>
     <script>
-        var doc = document,
-            surface,
-            finger,
-            source,
-            nodes = {},
-            myAudioContext,
-            hasTouch = 'ontouchstart' in window || 'createTouch' in document,
-            eventStart = hasTouch ? 'touchstart' : 'mousedown',
-            eventMove = hasTouch ? 'touchmove' : 'mousemove',
-            eventEnd = hasTouch ? 'touchend' : 'mouseup',
-            isMuted = false;
-
-        function init () {
-            if('webkitAudioContext' in window) {
-                myAudioContext = new webkitAudioContext() || AudioContext();
-            } else {
-                alert('Your browser does not support Web Audio API');
-            }
-
-            surface = doc.querySelector('.surface');
-            surface.addEventListener(eventStart, play, false);
-
-            finger = doc.querySelector('.finger');
-
-            doc.addEventListener('touchmove', function (e) {
-                e.preventDefault();
-            });
-        }
-
-        function routeSounds(source) {
-            var doc = document;
-            var filterType = doc.querySelector('#filter-type').value;
-            var volumeInput = doc.querySelector('#volume').value;
-
-            nodes.filter = myAudioContext.createBiquadFilter();
-            nodes.volume = myAudioContext.createGainNode();
-
-            nodes.filter.type = filterType;
-            nodes.volume.gain.value = volumeInput;
-
-            source.connect(nodes.filter);
-            nodes.filter.connect(nodes.volume);
-            nodes.volume.connect(myAudioContext.destination);
-
-            return source;
-        }
-
-        function play(e) {
-            var x = e.pageX - surface.offsetLeft;
-            var y = e.pageY - surface.offsetTop;
-
-            if(myAudioContext.activeSourceCount > 0) {
-                kill();
-            }
-
-            source = myAudioContext.createOscillator();
-            source.type = document.querySelector('#waveform').value; // sine wave
-            source = routeSounds(source);
-            source.frequency.value = 512 - x;
-            nodes.filter.frequency.value = 512 - y;
-            source.noteOn(0);
-
-            finger.style.webkitTransform = finger.style.MozTransform = finger.style.msTransform = finger.style.OTransform = finger.style.transform = 'translate(' + (x - finger.offsetWidth / 2) + 'px,' + (y - finger.offsetHeight / 2) + 'px)';
-            finger.className = 'finger active';
-            surface.className = 'surface pressed';
-
-            surface.addEventListener(eventMove, effect, false);
-            surface.addEventListener(eventEnd, stop, false);
-        }
-
-        function stop(e) {
-            var x = e.pageX - surface.offsetLeft;
-            var y = e.pageY - surface.offsetTop;
-
-            if(myAudioContext.activeSourceCount > 0) {
-                source.frequency.value = 512 - x;
-                nodes.filter.frequency.value = 512 - y;
-                source.noteOff(0);
-            }
-
-            finger.className = 'finger';
-            surface.className = 'surface';
-
-            surface.removeEventListener(eventMove, effect, false);
-            surface.removeEventListener(eventEnd, stop, false);
-        }
-
-        function kill() {
-            source.noteOff(0);
-            finger.className = 'finger';
-            surface.className = 'surface';
-
-            surface.removeEventListener(eventMove, effect, false);
-            surface.removeEventListener(eventEnd, stop, false);
-        }
-
-        function effect(e) {
-            var x = e.pageX - surface.offsetLeft;
-            var y = e.pageY - surface.offsetTop;
-            if(myAudioContext.activeSourceCount > 0) {
-                source.frequency.value = 512 - x;
-                nodes.filter.frequency.value = 512 - y;
-            }
-
-            finger.style.webkitTransform = finger.style.MozTransform = finger.style.msTransform = finger.style.OTransform = finger.style.transform = 'translate(' + (x - finger.offsetWidth / 2) + 'px,' + (y - finger.offsetHeight / 2) + 'px)';
-        }
-
-        function sliderChange(slider) {
-            if(myAudioContext.activeSourceCount > 0) {
-                if(slider.id == 'waveform') {
-                    stop();
-                    play();
-                }
-                else if(slider.id == 'frequency') {
-                    source.frequency.value = slider.value;
-                }
-                else if(slider.id == 'volume') {
-                    nodes.volume.gain.value = slider.value;
-                }
-            }
-        }
-
-        function filterChange(slider) {
-            if(myAudioContext.activeSourceCount > 0) {
-                if(slider.id == 'filter-type') {
-                    nodes.filter.type = slider.value;
-                }
-            }
-        }
+        
     </script>
 </head>
-<body class='main' onload="init()">
+<body class='main'>
 <div class="container">
     <div class="title">
         <h1>WavePad</h1>
