Add audio spectrum analyser

--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
         <h2>Volume</h2>
         <input id="volume" type="range" min="0" max="1" step="0.01" value="1" />
     </div>
-    <div class="surface"><div class="finger"></div></div>  
+    <div class="surface">
+        <div class="finger"></div>
+        <canvas width="512" height="512"></canvas>
+    </div>  
 </div>
 
 </body>
