Added footer with links to source

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
     <div class="surface">
         <div class="finger"></div>
         <canvas width="512" height="512"></canvas>
-    </div>  
+    </div> 
+    <p><a href="https://dvcs.w3.org/hg/audio/raw-file/tip/webaudio/specification.html">Web Audio API</a> demo by <a href="http://alxgbsn.co.uk">Alex Gibson</a>. Fork on <a href="https://github.com/alexgibson/wavepad">GitHub</a>.</p>
 </div>
 
 </body>
