Added convolution reverb effect

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <div class="oscillator">
         <h2>Waveform</h2>
         <select id="waveform">
-            <option value="0" selected>Sine</option>
-            <option value="1">Square</option>
+            <option value="0">Sine</option>
+            <option value="1" selected>Square</option>
             <option value="2">Sawtooth</option>
             <option value="3">Triangle</option>
         </select>
