--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
         <div class="finger"></div>
         <canvas width="512" height="512"></canvas>
     </div> 
+    <div class"panner">
+        <h2>Pan</h2>
+        <input id="pan" type="range" min="-3" max="3" step="0.01" value="0" />
+    </div>
     <p><a href="https://dvcs.w3.org/hg/audio/raw-file/tip/webaudio/specification.html">Web Audio API</a> demo by <a href="http://alxgbsn.co.uk">Alex Gibson</a>. Fork on <a href="https://github.com/alexgibson/wavepad">GitHub</a>.</p>
 </div>
 
