--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>WavePad</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="css/styles.css" />
+    <script src="js/rAF.js"></script>
     <script src="js/main.js"></script>
 </head>
 <body class='main'>
