Add reverb effect toggle

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
             <option value="7">All Pass</option>
         </select>
     </div>
-    <div class="output">
-        <h2>Volume</h2>
-        <input id="volume" type="range" min="0" max="1" step="0.01" value="1" />
+    <div class="reverb">
+        <h2>Reverb</h2>
+        <button id="reverb" type="button">On</button>
     </div>
     <div class="surface">
         <div class="finger"></div>
