Set reverb to off by default

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
     <div class="reverb">
         <h2>Reverb</h2>
-        <button id="reverb" type="button">On</button>
+        <button id="reverb" type="button">Off</button>
     </div>
     <div class="surface">
         <div class="finger"></div>
