Added delay effect and removed convolution reverb

--- a/index.html
+++ b/index.html
@@ -37,17 +37,13 @@
             <option value="7">All Pass</option>
         </select>
     </div>
-    <div class="reverb">
-        <h2>Reverb</h2>
-        <button id="reverb" type="button">Off</button>
-    </div>
     <div class="surface">
         <div class="finger"></div>
         <canvas width="512" height="512"></canvas>
     </div> 
     <div class"panner">
-        <h2>Pan</h2>
-        <input id="pan" type="range" min="-3" max="3" step="0.01" value="0" />
+        <h2>Delay</h2>
+        <input id="delay" type="range" min="0" max="0.9" step="0.1" value="0.3" />
     </div>
     <p><a href="https://dvcs.w3.org/hg/audio/raw-file/tip/webaudio/specification.html">Web Audio API</a> demo by <a href="http://alxgbsn.co.uk">Alex Gibson</a>. Fork on <a href="https://github.com/alexgibson/wavepad">GitHub</a>.</p>
 </div>
