--- a/index.html
+++ b/index.html
@@ -41,9 +41,15 @@
         <div class="finger"></div>
         <canvas width="512" height="512"></canvas>
     </div> 
-    <div class"panner">
-        <h2>Delay</h2>
-        <input id="delay" type="range" min="0" max="0.9" step="0.1" value="0.3" />
+    <div class="delay">
+        <div class="delay-time">
+            <h2>Delay Time</h2>
+            <input id="delay" type="range" min="0" max="0.9" step="0.1" value="0.3" />
+        </div>
+        <div class="delay-feedback">
+            <h2>Feedback</h2>
+            <input id="feedback" type="range" min="0" max="0.9" step="0.1" value="0.8" />
+        </div>
     </div>
     <p><a href="https://dvcs.w3.org/hg/audio/raw-file/tip/webaudio/specification.html">Web Audio API</a> demo by <a href="http://alxgbsn.co.uk">Alex Gibson</a>. Fork on <a href="https://github.com/alexgibson/wavepad">GitHub</a>.</p>
 </div>
