Add top padding to footer text

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
             <input id="feedback" type="range" min="0" max="0.9" step="0.1" value="0.8" />
         </div>
     </div>
-    <p><a href="https://dvcs.w3.org/hg/audio/raw-file/tip/webaudio/specification.html">Web Audio API</a> demo by <a href="http://alxgbsn.co.uk">Alex Gibson</a>. Fork on <a href="https://github.com/alexgibson/wavepad">GitHub</a>.</p>
+    <footer>
+        <p><a href="https://dvcs.w3.org/hg/audio/raw-file/tip/webaudio/specification.html">Web Audio API</a> demo by <a href="http://alxgbsn.co.uk">Alex Gibson</a>. Fork on <a href="https://github.com/alexgibson/wavepad">GitHub</a>.</p>
+    </footer>
 </div>
 
 </body>
