Add page meta info

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <meta name="description" content="WavePad - Experimenting with the Web Audio API" />
+    <meta name="description" content="Wave-PD1 - An interactive synth effect unit built using the Web Audio API for Chrome, Safari 6, iOS6 (iPad)" />
     <meta name="author" content="Alex Gibson" />
-    <title>WavePad</title>
+    <title>Wave-PD1 - An interactive synth effect unit built using the Web Audio API</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="css/styles.css" />
     <script src="js/rAF.js"></script>
@@ -13,7 +13,7 @@
 <body class='main'>
 <div class="container">
     <div class="title">
-        <h1>WavePad</h1>
+        <h1>Wave-PD1</h1>
     </div>
     <div class="oscillator">
         <h2>Waveform</h2>
