Allow user-scaling/zoom for easier use on small screen devices and add support for touchcancel

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="Wave-PD1 - An experimental, touch-based synthesizer built using the Web Audio API. Run on Chrome, Safari 6 or iOS6 (iPad)." />
     <meta name="author" content="Alex Gibson" />
     <title>Wave-PD1 - An experimental, touch-based synthesizer built using the Web Audio API.</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="apple-mobile-web-app-title" content="Wave-PD1">
     <link rel="stylesheet" href="css/styles.css" />
     <script src="js/rAF.js"></script>
