--- a/index.html
+++ b/index.html
@@ -55,11 +55,13 @@
     <div class="delay">
         <div class="delay-time">
             <h2>Delay Time</h2>
-            <input id="delay" type="range" min="0" max="0.9" step="0.1" value="0.3" />
+            <input id="delay" type="range" min="0" max="0.99" step="0.01" value="0.50" />
+            <output id="delay-output" for="delay"></output>
         </div>
         <div class="delay-feedback">
             <h2>Feedback</h2>
             <input id="feedback" type="range" min="0" max="0.9" step="0.1" value="0.8" />
+            <output id="feedback-output" for="feedback"></output>
         </div>
     </div>
     <footer>
