Added support for mobile small screen sizes

--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@
         </select>
     </div>
     <div class="surface">
-        <div class="finger"></div>
-        <canvas width="512" height="512"></canvas>
+        <div class="middle">
+            <div class="finger"></div>
+            <canvas></canvas>
+        </div>
     </div> 
     <div class="delay">
         <div class="delay-time">
