--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 </head>
 <body class='main'>
 <div class="container">
-    <div class="title">
+    <header class="title">
         <h1>Wave-PD1</h1>
-    </div>
-    <div class="oscillator">
+    </header>
+    <section class="oscillator">
         <h2>Waveform</h2>
         <select id="waveform">
             <option value="0">Sine</option>
@@ -34,8 +34,8 @@
             <option value="2">Sawtooth</option>
             <option value="3">Triangle</option>
         </select>
-    </div>
-    <div class="filter">
+    </section>
+    <section class="filter">
         <h2>Filter</h2>
         <select id="filter-type">
             <option value="0" selected>Lowpass</option>
@@ -47,14 +47,14 @@
             <option value="6">Notch</option>
             <option value="7">All Pass</option>
         </select>
-    </div>
-    <div class="surface">
+    </section>
+    <section class="surface">
         <div class="middle">
             <div class="finger"></div>
             <canvas></canvas>
         </div>
-    </div> 
-    <div class="delay">
+    </section> 
+    <section class="delay">
         <div class="delay-time">
             <h2>Delay Time</h2>
             <input id="delay" type="range" min="0" max="0.999" step="0.001" value="0.500" />
@@ -65,7 +65,7 @@
             <input id="feedback" type="range" min="0" max="0.9" step="0.1" value="0.8" />
             <output id="feedback-output" for="feedback"></output>
         </div>
-    </div>
+    </section>
     <footer>
         <p><a href="https://dvcs.w3.org/hg/audio/raw-file/tip/webaudio/specification.html">Web Audio API</a> demo by <a href="http://alxgbsn.co.uk">Alex Gibson</a>. Fork on <a href="https://github.com/alexgibson/wavepad">GitHub</a>.</p>
     </footer>
