Add welcome modal overlay

--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
     </script>
 </head>
 <body class='main'>
-<div class="container">
+<section class="welcome">
+    <h2>Welcome!</h2>
+    <p>This is an audio experiment built using the Web Audio API.</p>
+    <p>Touch &amp; move your finger or mouse on the surface to create sounds.</p>
+    <button id="start" type="button">Ok, let's go!</button>
+</section>
+<div class="container blurred">
     <header class="title">
         <h1>Wave-PD1</h1>
     </header>
