Update author info

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 <body class='main'>
 <section class="welcome">
     <h2>Welcome!</h2>
-    <p>This is an audio experiment built using the Web Audio API.</p>
-    <p>Touch &amp; move your finger or mouse on the surface to create sounds.</p>
+    <p>This is a Web Audio API experiment by <a href="http://alxgbsn.co.uk">Alex Gibson</a>.</p>
+    <p>Like my work? <a href="http://alxgbsn.co.uk/contact/">Hire me!</a></p>
     <button id="start" type="button">Ok, let's go!</button>
 </section>
 <div class="container blurred">
@@ -71,7 +71,7 @@
         </div>
     </section>
     <footer>
-        <p><a href="https://dvcs.w3.org/hg/audio/raw-file/tip/webaudio/specification.html">Web Audio API</a> demo by <a href="http://alxgbsn.co.uk">Alex Gibson</a>. Fork on <a href="https://github.com/alexgibson/wavepad">GitHub</a>.</p>
+        <p><a href="https://dvcs.w3.org/hg/audio/raw-file/tip/webaudio/specification.html">Web Audio API</a> experiment by <a href="http://alxgbsn.co.uk">Alex Gibson</a>. Fork on <a href="https://github.com/alexgibson/wavepad">GitHub</a>.</p>
     </footer>
 </div>
 
