Update author info

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <meta name="description" content="Wave-PD1 - An experimental, touch-based synthesizer built using the Web Audio API. Run on Chrome, Safari 6 or iOS6 (iPad)." />
+    <meta name="description" content="Wave-PD1 - An experimental synthesizer built using the Web Audio API." />
     <meta name="author" content="Alex Gibson" />
-    <title>Wave-PD1 - An experimental, touch-based synthesizer built using the Web Audio API.</title>
+    <title>Wave-PD1 - An experimental synthesizer built using the Web Audio API.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
     <meta name="apple-mobile-web-app-title" content="Wave-PD1">
     <link rel="stylesheet" href="css/styles.css" />
@@ -22,12 +22,6 @@
     </script>
 </head>
 <body class='main'>
-<section class="welcome">
-    <h2>Welcome!</h2>
-    <p>This is a Web Audio API experiment by <a href="http://alxgbsn.co.uk">Alex Gibson</a>.</p>
-    <p>Like my work? <a href="http://alxgbsn.co.uk/contact/">Hire me!</a></p>
-    <button id="start" type="button">Ok, let's go!</button>
-</section>
 <div class="container blurred">
     <header class="title">
         <h1>Wave-PD1</h1>
@@ -71,7 +65,7 @@
         </div>
     </section>
     <footer>
-        <p><a href="https://dvcs.w3.org/hg/audio/raw-file/tip/webaudio/specification.html">Web Audio API</a> experiment by <a href="http://alxgbsn.co.uk">Alex Gibson</a>. Fork on <a href="https://github.com/alexgibson/wavepad">GitHub</a>.</p>
+        <p>Author: <a href="http://alxgbsn.co.uk">Alex Gibson</a><br><a href="https://github.com/alexgibson/wavepad">Fork on GitHub</a> | <a href="http://alxgbsn.co.uk/contact/">Hire me</a></p>
     </footer>
 </div>
 
