Add favicon and touch icons

--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
     })();
     </script>
+    <!-- iOS home screen icons -->
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/iOS-144.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/iOS-114.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/iOS-72.png" />
+    <link rel="apple-touch-icon-precomposed" href="images/iOS-57.png" />
+    <link rel="icon" href="images/iOS-57.png" />
 </head>
 <body class='main'>
 <div class="container blurred">
