Add support link

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
     </section>
     <footer>
-        <p>Author: <a href="http://alxgbsn.co.uk">Alex Gibson</a><br><a href="https://github.com/alexgibson/wavepad">Fork on GitHub</a> | <a href="http://alxgbsn.co.uk/contact/">Hire me</a></p>
+        <p>Author: <a href="http://alxgbsn.co.uk">Alex Gibson</a><br><a href="https://github.com/alexgibson/wavepad/issues">Support</a> | <a href="http://alxgbsn.co.uk/contact/">Hire me</a></p>
     </footer>
 </div>
 
