--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="author" content="Alex Gibson" />
     <title>Wave-PD1 - An experimental synthesizer built using the Web Audio API.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-    <meta name="apple-mobile-web-app-title" content="Wave-PD1">
+    <meta name="apple-mobile-web-app-title" content="Wave-PD1" />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <link rel="stylesheet" href="css/styles.css" />
     <script src="js/rAF.js"></script>
     <script src="js/main.js"></script>
