--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
     </section>
     <footer>
-        <p>Author: <a href="http://alxgbsn.co.uk">Alex Gibson</a><br><a href="https://github.com/alexgibson/wavepad/issues">Support</a> | <a href="http://alxgbsn.co.uk/contact/">Hire me</a></p>
+        <p>Author: <a href="http://alxgbsn.co.uk">Alex Gibson</a><br>Support: <a href="https://github.com/alexgibson/wavepad/issues">GitHub</a></p>
     </footer>
 </div>
 
