Refactor audio routing

--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
             <option value="7">All Pass</option>
         </select>
     </section>
+    <section class="power">
+        <h2>Power</h2>
+        <button id="power" type="button" class="off">On/Off</button>
+    </section>
     <section class="surface">
         <div class="finger"></div>
         <canvas></canvas>
@@ -67,7 +71,7 @@
         </div>
         <div class="delay-feedback">
             <h2>Feedback</h2>
-            <input id="feedback" type="range" min="0" max="0.9" step="0.1" value="0.8" />
+            <input id="feedback" type="range" min="0" max="0.9" step="0.1" value="0.4" />
             <output id="feedback-output" for="feedback"></output>
         </div>
     </section>
