--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <link rel="apple-touch-icon-precomposed" href="images/iOS-57.png" />
     <link rel="icon" href="images/iOS-57.png" />
 </head>
-<body class='main'>
+<body class="main off">
 <div class="container blurred">
     <header class="title">
         <h1>Wave-PD1</h1>
@@ -57,7 +57,7 @@
     </section>
     <section class="power">
         <h2>Power</h2>
-        <button id="power" type="button" class="off">On/Off</button>
+        <button id="power" type="button">On/Off</button>
     </section>
     <section class="surface">
         <div class="finger"></div>
