--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <title>Wave-PD1 - An experimental synthesizer built using the Web Audio API.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
     <meta name="apple-mobile-web-app-title" content="Wave-PD1" />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <link rel="stylesheet" href="css/styles.css" />
-    <script src="js/rAF.js"></script>
-    <script src="js/main.js"></script>
+
+    <script src="dist/rAF.js"></script>
+    <script src="dist/main.js"></script>
+
     <script type="text/javascript">
     var _gaq = _gaq || [];
     _gaq.push(['_setAccount', 'UA-33263279-1']);
@@ -21,6 +22,7 @@
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
     })();
     </script>
+
     <!-- iOS home screen icons -->
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/iOS-144.png" />
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/iOS-114.png" />
