--- a/index.html
+++ b/index.html
@@ -1,85 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta name="description" content="Wave-PD1 - An experimental synthesizer built using the Web Audio API." />
-    <meta name="author" content="Alex Gibson" />
-    <title>Wave-PD1 - An experimental synthesizer built using the Web Audio API.</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-    <meta name="apple-mobile-web-app-title" content="Wave-PD1" />
-    <link rel="stylesheet" href="css/styles.css" />
+  <meta charset="utf-8" />
+  <meta name="description" content="Wave-PD1 - An experimental synthesizer built using the Web Audio API." />
+  <meta name="author" content="Alex Gibson" />
+  <title>Wave-PD1 - An experimental synthesizer built using the Web Audio API.</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+  <meta name="apple-mobile-web-app-title" content="Wave-PD1" />
+  <link rel="stylesheet" href="css/styles.css" />
 
-    <script src="dist/rAF.js"></script>
-    <script src="dist/main.js"></script>
+  <script src="dist/rAF.js"></script>
+  <script src="dist/main.js"></script>
 
-    <script type="text/javascript">
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-33263279-1']);
-    _gaq.push(['_trackPageview']);
-    (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();
-    </script>
+  <!-- Google Analytics -->
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    <!-- iOS home screen icons -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/iOS-144.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/iOS-114.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/iOS-72.png" />
-    <link rel="apple-touch-icon-precomposed" href="images/iOS-57.png" />
-    <link rel="icon" href="images/iOS-57.png" />
+    ga('create', 'UA-33263279-1', 'auto');
+    ga('send', 'pageview');
+  </script>
+  <!-- End Google Analytics -->
+
+  <!-- iOS home screen icons -->
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/iOS-144.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/iOS-114.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/iOS-72.png" />
+  <link rel="apple-touch-icon-precomposed" href="images/iOS-57.png" />
+  <link rel="icon" href="images/iOS-57.png" />
 </head>
 <body class="main off">
 <div class="container blurred">
-    <header class="title">
-        <h1>Wave-PD1</h1>
-    </header>
-    <section class="oscillator">
-        <h2>Waveform</h2>
-        <select id="waveform">
-            <option value="0">Sine</option>
-            <option value="1" selected>Square</option>
-            <option value="2">Sawtooth</option>
-            <option value="3">Triangle</option>
-        </select>
-    </section>
-    <section class="filter">
-        <h2>Filter</h2>
-        <select id="filter-type">
-            <option value="0" selected>Lowpass</option>
-            <option value="1">Highpass</option>
-            <option value="2">Bandpass</option>
-            <option value="3">Lowshelf</option>
-            <option value="4">Highshelf</option>
-            <option value="5">Peaking</option>
-            <option value="6">Notch</option>
-            <option value="7">All Pass</option>
-        </select>
-    </section>
-    <section class="power">
-        <h2>Power</h2>
-        <button id="power" type="button">On/Off</button>
-    </section>
-    <section class="surface">
-        <div class="finger"></div>
-        <canvas></canvas>
-    </section>
-    <section class="delay">
-        <div class="delay-time">
-            <h2>Delay Time</h2>
-            <input id="delay" type="range" min="0" max="0.999" step="0.001" value="0.500" />
-            <output id="delay-output" for="delay"></output>
-        </div>
-        <div class="delay-feedback">
-            <h2>Feedback</h2>
-            <input id="feedback" type="range" min="0" max="0.9" step="0.1" value="0.4" />
-            <output id="feedback-output" for="feedback"></output>
-        </div>
-    </section>
-    <footer>
-        <p>Author: <a href="http://alxgbsn.co.uk">Alex Gibson</a><br>Support: <a href="https://github.com/alexgibson/wavepad/issues">GitHub</a></p>
-    </footer>
+  <header class="title">
+    <h1>Wave-PD1</h1>
+  </header>
+  <section class="oscillator">
+    <h2>Waveform</h2>
+    <select id="waveform">
+        <option value="0">Sine</option>
+        <option value="1" selected>Square</option>
+        <option value="2">Sawtooth</option>
+        <option value="3">Triangle</option>
+    </select>
+  </section>
+  <section class="filter">
+    <h2>Filter</h2>
+    <select id="filter-type">
+        <option value="0" selected>Lowpass</option>
+        <option value="1">Highpass</option>
+        <option value="2">Bandpass</option>
+        <option value="3">Lowshelf</option>
+        <option value="4">Highshelf</option>
+        <option value="5">Peaking</option>
+        <option value="6">Notch</option>
+        <option value="7">All Pass</option>
+    </select>
+  </section>
+  <section class="power">
+    <h2>Power</h2>
+    <button id="power" type="button">On/Off</button>
+  </section>
+  <section class="surface">
+    <div class="finger"></div>
+    <canvas></canvas>
+  </section>
+  <section class="delay">
+    <div class="delay-time">
+      <h2>Delay Time</h2>
+      <input id="delay" type="range" min="0" max="0.999" step="0.001" value="0.500" />
+      <output id="delay-output" for="delay"></output>
+    </div>
+    <div class="delay-feedback">
+      <h2>Feedback</h2>
+      <input id="feedback" type="range" min="0" max="0.9" step="0.1" value="0.4" />
+      <output id="feedback-output" for="feedback"></output>
+    </div>
+  </section>
+  <footer>
+    <p>Author: <a href="http://alxgbsn.co.uk">Alex Gibson</a><br>Code: <a href="https://github.com/alexgibson/wavepad/">GitHub</a></p>
+  </footer>
 </div>
 
 </body>
