Use ES6 Maps for filter & wave legacy value lookup

--- a/index.html
+++ b/index.html
@@ -39,23 +39,23 @@
   <section class="oscillator">
     <h2>Waveform</h2>
     <select id="waveform">
-        <option value="0">Sine</option>
-        <option value="1" selected>Square</option>
-        <option value="2">Sawtooth</option>
-        <option value="3">Triangle</option>
+        <option value="sine">Sine</option>
+        <option value="square" selected>Square</option>
+        <option value="sawtooth">Sawtooth</option>
+        <option value="triangle">Triangle</option>
     </select>
   </section>
   <section class="filter">
     <h2>Filter</h2>
     <select id="filter-type">
-        <option value="0" selected>Lowpass</option>
-        <option value="1">Highpass</option>
-        <option value="2">Bandpass</option>
-        <option value="3">Lowshelf</option>
-        <option value="4">Highshelf</option>
-        <option value="5">Peaking</option>
-        <option value="6">Notch</option>
-        <option value="7">All Pass</option>
+        <option value="lowpass" selected>Lowpass</option>
+        <option value="highpass">Highpass</option>
+        <option value="bandpass">Bandpass</option>
+        <option value="lowshelf">Lowshelf</option>
+        <option value="highshelf">Highshelf</option>
+        <option value="peaking">Peaking</option>
+        <option value="notch">Notch</option>
+        <option value="allpass">All Pass</option>
     </select>
   </section>
   <section class="power">
