--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="description" content="Wave-PD1 - An experimental synthesizer built using the Web Audio API." />
+  <meta name="description" content="An experimental synthesizer built using the Web Audio API." />
   <meta name="author" content="Alex Gibson" />
-  <title>Wave-PD1 - An experimental synthesizer built using the Web Audio API.</title>
+  <title>Wave-PD1</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-  <meta name="apple-mobile-web-app-title" content="Wave-PD1" />
   <link rel="stylesheet" href="css/styles.css" />
 
   <!-- Google Analytics -->
@@ -21,31 +20,32 @@
   </script>
   <!-- End Google Analytics -->
 
-  <!-- iOS home screen icons -->
+  <!-- App icons -->
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/iOS-144.png" />
   <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/iOS-114.png" />
   <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/iOS-72.png" />
   <link rel="apple-touch-icon-precomposed" href="images/iOS-57.png" />
   <link rel="icon" href="images/iOS-57.png" />
 </head>
+
 <body class="main off">
-<div class="container blurred">
+<main role="main">
   <header class="title">
     <h1>Wave-PD1</h1>
   </header>
   <section class="oscillator">
-    <h2>Waveform</h2>
+    <label for="waveform">Waveform</label>
     <select id="waveform">
         <option value="sine">Sine</option>
-        <option value="square" selected>Square</option>
+        <option value="square">Square</option>
         <option value="sawtooth">Sawtooth</option>
         <option value="triangle">Triangle</option>
     </select>
   </section>
   <section class="filter">
-    <h2>Filter</h2>
+    <label for="filter-type">Filter</label>
     <select id="filter-type">
-        <option value="lowpass" selected>Lowpass</option>
+        <option value="lowpass">Lowpass</option>
         <option value="highpass">Highpass</option>
         <option value="bandpass">Bandpass</option>
         <option value="lowshelf">Lowshelf</option>
@@ -56,7 +56,7 @@
     </select>
   </section>
   <section class="power">
-    <h2>Power</h2>
+    <label for="power">Power</label>
     <button id="power" type="button">On/Off</button>
   </section>
   <section class="surface">
@@ -65,12 +65,12 @@
   </section>
   <section class="delay">
     <div class="delay-time">
-      <h2>Delay Time</h2>
+      <label for="delay">Delay Time</label>
       <input id="delay" type="range" min="0" max="0.999" step="0.001" value="0.500" />
       <output id="delay-output" for="delay"></output>
     </div>
     <div class="delay-feedback">
-      <h2>Feedback</h2>
+      <label for="feedback">Feedback</label>
       <input id="feedback" type="range" min="0" max="0.9" step="0.1" value="0.4" />
       <output id="feedback-output" for="feedback"></output>
     </div>
@@ -78,7 +78,7 @@
   <footer>
     <p>Author: <a href="http://alxgbsn.co.uk">Alex Gibson</a><br>Code: <a href="https://github.com/alexgibson/wavepad/">GitHub</a></p>
   </footer>
-</div>
+</main>
 
 <script src="dist/rAF.js"></script>
 <script src="dist/main.js"></script>
