Bundle ES6 modules via Browserify

--- a/index.html
+++ b/index.html
@@ -80,8 +80,6 @@
   </footer>
 </main>
 
-<script src="dist/rAF.js"></script>
-<script src="dist/main.js"></script>
-
+<script src="dist/bundle.js"></script>
 </body>
 </html>
