Pass id to constructor as a requirement

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
   <link rel="icon" href="images/iOS-57.png" />
 </head>
 
-<body class="main off">
-<main role="main">
+<body>
+<main role="main" id="wave-pd1" class="off">
   <header class="title">
     <h1>Wave-PD1</h1>
   </header>
