Move assets into src directory

--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
     <p>Author: <a href="http://alxgbsn.co.uk">Alex Gibson</a><br>Code: <a href="https://github.com/alexgibson/wavepad/">GitHub</a></p>
   </footer>
 </main>
-<script src="dist/bundle.js"></script>
+<script src="js/bundle.js"></script>
 
 <!-- Google Analytics -->
 <script>
