Fix link to use https

--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
     </div>
   </section>
   <footer>
-    <p>Author: <a href="http://alxgbsn.co.uk">Alex Gibson</a><br>Code: <a href="https://github.com/alexgibson/wavepad/">GitHub</a></p>
+    <p>Author: <a href="https://alxgbsn.co.uk">Alex Gibson</a><br>Code: <a href="https://github.com/alexgibson/wavepad/">GitHub</a></p>
   </footer>
 </main>
 <script src="js/bundle.js"></script>
