--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <title>Wave-PD1</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <link rel="stylesheet" href="css/styles.css" />
+  <link rel="manifest" href="manifest.json">
 
   <!-- App icons -->
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/iOS-144.png" />
