Test Service Worker update

--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
       <output id="feedback-output" for="feedback"></output>
     </div>
   </section>
-  <footer>
+  <footer role="contentinfo">
     <p>Author: <a href="https://alxgbsn.co.uk">Alex Gibson</a><br>Code: <a href="https://github.com/alexgibson/wavepad/">GitHub</a></p>
   </footer>
 </main>
