Add ARIA role to header

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 
 <body>
 <main role="main" id="wave-pd1" class="off">
-  <header class="title">
+  <header role="banner" class="title">
     <h1>Wave-PD1</h1>
   </header>
   <section class="oscillator">
